--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -3,6 +3,7 @@ $grey500: #9e9e9e
 $grey800: #424242
 $grey900: #212121
 $orange700: #f57c00
+$yellow: #f5d72b
 $white: #fff
 $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12)
 
@@ -34,7 +35,33 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       color: $white
       cursor: pointer
 
+.article-node > a
+  background: $yellow
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0 auto
+  padding: 15px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
 .mindmap-node--editable
+  cursor: all-scroll
+
+  & > a
+    pointer-events: none
+
+.article-node--editable
   cursor: all-scroll
 
   & > a
