--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -85,12 +85,14 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
   stroke: $grey500
   stroke-dasharray: 10px 4px
   stroke-width: 3px
+  marker-end: url(#arrow)
 
 .mindmap-connection-reference
   fill: transparent
   stroke: orange
   stroke-dasharray: 10px 4px
   stroke-width: 3px
+  marker-end: url(#arrow)
 
 .mindmap-emoji
   height: 24px
