zwx: 随笔节点引入路书编辑器

--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -96,6 +96,47 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       color: $white
       cursor: pointer
 
+.essay-node > a
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0 auto
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
+.essay-node-chosen > a
+  border: dashed
+  border-width: 2px
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0px auto
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
 .mindmap-node--editable
   cursor: all-scroll
 
