--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -16,6 +16,8 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
     outline: none
 
 .mindmap-node > a
+  max-width: 500px
+  height: auto
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -35,6 +37,8 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .mindmap-node-chosen > a
+  max-width: 500px
+  height: auto
   border: dashed
   border-width: 2px
   border-radius: 10px
@@ -56,6 +60,8 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .article-node > a
+  max-width: 500px
+  height: auto;
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -75,6 +81,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .article-node-chosen > a
+  max-width: 500px
   border: dashed
   border-width: 2px
   border-radius: 10px
@@ -97,6 +104,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .essay-node > a
+  max-width: 500px
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -116,6 +124,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .essay-node-chosen > a
+  max-width: 500px
   border: dashed
   border-width: 2px
   border-radius: 10px
