--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -61,7 +61,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 
 .article-node > a
   max-width: 500px
-  height: auto;
+  height: auto
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -82,6 +82,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 
 .article-node-chosen > a
   max-width: 500px
+  height: auto
   border: dashed
   border-width: 2px
   border-radius: 10px
@@ -105,6 +106,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 
 .essay-node > a
   max-width: 500px
+  height: auto
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -125,6 +127,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 
 .essay-node-chosen > a
   max-width: 500px
+  height: auto
   border: dashed
   border-width: 2px
   border-radius: 10px
