--- a/src/components/roadmap/style.sass
+++ b/src/components/roadmap/style.sass
@@ -16,7 +16,8 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
     outline: none
 
 .mindmap-node > a
-  background: $grey100
+  max-width: 500px
+  height: auto
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -24,7 +25,30 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
   font-family: 'Raleway'
   font-size: 22px
   margin: 0 auto
-  padding: 15px
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
+.mindmap-node-chosen > a
+  max-width: 500px
+  height: auto
+  border: dashed
+  border-width: 2px
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0 auto
+  padding: 10px
   text-align: center
   text-decoration: none
   transition: background-color .2s, color .2s ease-out
@@ -36,7 +60,8 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
       cursor: pointer
 
 .article-node > a
-  background: $yellow
+  max-width: 500px
+  height: auto
   border-radius: 10px
   box-shadow: $shadow
   color: $grey900
@@ -44,10 +69,79 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
   font-family: 'Raleway'
   font-size: 22px
   margin: 0 auto
-  padding: 15px
+  padding: 10px
   text-align: center
   text-decoration: none
   transition: background-color .2s, color .2s ease-out
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
+.article-node-chosen > a
+  max-width: 500px
+  height: auto
+  border: dashed
+  border-width: 2px
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0px auto
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
+.essay-node > a
+  max-width: 500px
+  height: auto
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0 auto
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
+  &[href]
+    &:hover
+      background-color: $orange700
+      color: $white
+      cursor: pointer
+
+.essay-node-chosen > a
+  max-width: 500px
+  height: auto
+  border: dashed
+  border-width: 2px
+  border-radius: 10px
+  box-shadow: $shadow
+  color: $grey900
+  display: inline-block
+  font-family: 'Raleway'
+  font-size: 22px
+  margin: 0px auto
+  padding: 10px
+  text-align: center
+  text-decoration: none
+  transition: background-color .2s, color .2s ease-out
+
 
   &[href]
     &:hover
@@ -83,6 +177,13 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 .mindmap-connection
   fill: transparent
   stroke: $grey500
+  stroke-dasharray: 10px 2px
+  stroke-width: 3px
+  marker-end: url(#arrow)
+
+.mindmap-connection-chosen
+  fill: transparent
+  stroke: black
   stroke-dasharray: 10px 4px
   stroke-width: 3px
   marker-end: url(#arrow)
@@ -90,7 +191,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
 .mindmap-connection-reference
   fill: transparent
   stroke: orange
-  stroke-dasharray: 10px 4px
+  stroke-dasharray: 10px 2px
   stroke-width: 3px
   marker-end: url(#arrow)
 
